--- a/app/globals.css
+++ b/app/globals.css
@@ -87,7 +87,7 @@ h1 {
 }
 
 .bmc-btn {
-  background: #ffdd00;
+  background: #f3e063;
   color: #000;
   padding: 8px 12px;
   border-radius: 10px;
